# bettary_api

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 35605900b320_initial.py  5964564d5673_added_battaries_and_cells_tables.py  61df16ebc6a8_productmodel_table.py  b0f1c8c0065e_added_product_models_table.py
app/: main.py  messages.py  seed_db.py
app/core/: __init__.py  config.py  database.py  logger.py
app/models/: __init__.py  battery.py  cell.py  product_model.py
app/repositories/: base.py  battery_repo.py  cell_repo.py
app/services/: cell_service.py
app/tui/views/: data_view.py  home_view.py  main_view.py
app/tui/widgets/: log_widget.py
app/utils/: observable.py
app/views/: data_view.py  home_view.py  main_view.py  settings_view.py
